Version 0.84.xxxxx - xx.xx.2010

    * Updated libvpx to 0.9.2
    * Updated webmdshow to 0.9.10
    * Updated libtheora to 1.2.0 alpha (SVN)
    * Updated libtremor
    * Added "controls" attribute to HTML5 <video> ActiveX plugin

Version 0.84.17359 - 04.08.2010
    
    * Released Windows CE decoder package, no WebM/VP8 support for now, only Ogg Vorbis,
      Theora, FLAC and Speex decoders.
    * Fixed a bug in Theora DirectShow encoder filter when multiple encoder filters were used
      in the same graph

Version 0.84.17338 - 20.07.2010

    * Updated webmdshow to 0.9.9.0
    * Fixed installer script regarding URL registration 
      (fixes "Open URL..." in Windows Media Player)
    * Fixed Vorbis URL playback which was broken in previous version
    * Installer uses localised "Open" and "Play" shell commands

Version 0.84.17315 - 30.06.2010
    
    * Added WebM support (libvpx 0.9.1, webmdshow 0.9.8.1)
    * Installer updates: 
        - merged Win32 and x64 installers into one installer
        - added support for WebM
        - dropped support for Annodex Muxer, CMML decoder filters 
        - added "Open Codecs version" to Internet Explorer User Agent signature
    * Added WebM support to HTML5 <video> ActiveX plugin.
    * Fixed #1702: Consider integration of webm and vp8
    
Version 0.83.17220 - 16.05.2010

    * Updated libvorbis to version 1.3.1
    * Updated libogg to version 1.2.0
    * Ogg Demux filter has been changed from a source + parser filter to just parser filter. This step allows usage of 
      DirectShow's "File Source (Async.)" filter which can handle files bigger than 2GB, or "File Source (URL)" which
      gives better networking support (proxy, ipv6, etc.)
    * HTML5 <video> plug-in has received a couple of improvements:
        - URI support given by uriparser library
        - VMR9 support (instead of VMR7), this requires DirectX9
        - Internet Explorer Standards mode support, instead of just Quirks mode