@@ -110,6 +110,9 @@ public:
     void OnMouseButtonUp(long x, long y);
     void OnMouseMove(long x, long y);
 
+    bool EnableControls() const { return m_enableControls; }
+    void EnableControls(bool val) { m_enableControls = val; }
+
 private:
     void Thread_PrepareGraph();
 
@@ -132,9 +135,6 @@ private:
 
     void CreateDevice();
     CComPtr<IDirect3DDevice9>& GetDevice();
-
-    bool EnableControls() const { return m_enableControls; }
-    void EnableControls(bool val) { m_enableControls = val; }
 
 private:
     FilterGraph m_filterGraph;
